# gravitee-apim-rest-api/gravitee-apim-rest-api-management-v2/gravitee-apim-rest-api-management-v2-rest/src/main/java/io/gravitee/rest/api/management/v2/rest/resource/observability/ObservabilityResource.java
@@ -33,4 +33,9 @@ public class ObservabilityResource {
     public ObservabilityFilterValuesResource getFilterValuesResource() {
         return resourceContext.getResource(ObservabilityFilterValuesResource.class);
     }
+
+    @Path("/filters/resolve")
+    public ObservabilityFilterLabelsResource getFilterLabelsResource() {
+        return resourceContext.getResource(ObservabilityFilterLabelsResource.class);
+    }
 }
